--- a/app/javascript/stylesheets/_exchange_box.scss
+++ b/app/javascript/stylesheets/_exchange_box.scss
@@ -1,8 +1,9 @@
 .exchange_box {
   .card {
     border: 0;
+    border-radius: 5px;
     .card-header {
-      background-color: #878d99;
+      background-color: #998799;
       border-radius: 0;
       color: white;
       font-weight: 700;
@@ -13,13 +14,13 @@
       padding: 20px;
 
       .title {
-        color: #878d99;
+        color: #998799;
         font-weight: 700;
       }
     }
     .btn-exchange {
-      background-color: #5bc0de;
-      border-color: #5bc0de;
+      background-color: #c05bde;
+      border-color: #c05bde;
       border-radius: 0;
     }
   }
