--- a/app/views/exchanges/index.html.erb
+++ b/app/views/exchanges/index.html.erb
@@ -12,10 +12,10 @@
     </div>
     <div class ="col-lg-7 offset-lg-1 hidden-sm-down title-box">
       <div class="row">
-        <h2 class="subtitle"> Converta facilmente suas Moedas</h2>
+        <h2 class="subtitle">Conversor universal de moedas</h2>
       </div>
       <div class="row">
-        <h3 class="subtitle">Para qualquer moeda no Mundo!</h3>
+        <h3 class="subtitle">Para qualquer moeda até Bitcoin!</h3>
       </div>
     </div>
   </div>
