--- a/app/views/exchanges/_exchange_box.html.erb
+++ b/app/views/exchanges/_exchange_box.html.erb
@@ -18,14 +18,16 @@
         <div class="destination_currency">
           <div class="form-group">
             <p class="title">Moeda Pretendida</p>
-            <%= f.select "target_currency", options_for_select(currency_list, "BRL"), {}, { class: "form-control", id: "target_currency" } %>
+            <%= f.select "target_currency", options_for_select(currency_list, "BTC"), {}, { class: "form-control", id: "target_currency" } %>
           </div>
           <div class="form-group">
             <input name="text" id="result" class="form-control" placeholder="resultado" readonly />
           </div>
         </div>
         <div>
-          <%= f.submit "CONVERTER", class: "btn btn-primary btn-exchange col-md-12" %>
+          <button type='button' name='buttonReverse' id='buttonReverse' class="btn btn-primary btn-exchange col-md-12">
+            INVERTER
+          </button>
         </div>
       <% end %>
     </div>
